--- a/analysis/workflows_finished/main_figures/figure_building.Rmd
+++ b/analysis/workflows_finished/main_figures/figure_building.Rmd
@@ -2,7 +2,9 @@
 title: "Figures for paper"
 author: "Rachael 'Rocky' Aikens, Voight Lab"
 date: "August 3, 2017"
-output: pdf_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
