--- a/analysis/workflows_finished/clustering/heatmaps_report.Rmd
+++ b/analysis/workflows_finished/clustering/heatmaps_report.Rmd
@@ -277,7 +277,7 @@ With subcontext.heatmap, we can visualize all 7mers which have 5mer contexts tha
 
 ```{r 7mers from heterogeneous 5mers, echo = F}
 # 5mers in the first separated group which appears JPT elevated
-c5 <- cutree(dr.5.JPT3mers, k = 4)
+c5 <- cutree(dr.5.JPT3mers, k = 3)
 JPT5mers <- subset(names(c5), c5 == 1)
 
 # plot 7mers which have one of these 5mers as the subcontext
@@ -296,8 +296,8 @@ c7.1 <- cutree(dr.7.JPT3mers, k = 2)
 JPT7mers.1 <- subset(names(c7.1), c7.1 == 2)
 
 #get JPT7mers from clustering of JPT5mers
-c7.2 <- cutree(dr.7.JPT5mers, k = 7)
-JPT7mers.2 <- subset(names(c7.2), c7.2 == 1)
+c7.2 <- cutree(dr.7.JPT5mers, k = 5)
+JPT7mers.2 <- subset(names(c7.2), c7.2 == 4)
 
 JPT7mers.3 <- intersect(JPT7mers.1, JPT7mers.2)
 ```
@@ -379,7 +379,6 @@ proptest.byrow <- function(counts, gw, muts = c(), method = "fisher"){
 
 ```{r upload data, echo = F}
 counts.JPT.7mer <- read.delim("subpops/7mer/JPT_EAS_7mer_counts.txt")
-counts.JPTCHBCHS.7mer <- read.delim("subpops/7mer/JPTCHSCHB_EAS_7mer_counts.txt")
 gw.7mer <- read.delim("gw_counts/gw_7mer_counts.txt")
 counts.JPT.5mer <- read.delim("subpops/5mer/JPT_EAS_5mer_counts.txt")
 gw.5mer <- read.delim("gw_counts/gw_5mer_counts.txt")
@@ -480,7 +479,7 @@ p.5mer$fdr <- p.adjust(p.5mer$p, "fdr")
 kable(subset(p.5mer[-c(2:6)], p.5mer$fdr < 0.1), row.names = F, caption = "5mers significantly enriched on X")
 ```
 
-```{r X enriched 7mers, echo = F, eval = F}
+```{r X enriched 7mers, echo = F, eval = T}
 p.7mer.1 <- binomtest.byrow(counts.JPT.7mer, gw.7mer, JPT7mers.1)
 p.7mer.1$fdr <- p.adjust(p.7mer.1$p, "fdr")
 kable(subset(p.7mer.1[-c(2:6)], p.7mer.1$fdr < 0.1), row.names = F, caption = "7mers significantly enriched on X")
@@ -551,29 +550,37 @@ chi.bysubset <- function(data, gw, muts = c()){
 
 ```{r x enrichment by cluster}
 #3mer groups
-chi.bycluster(data = counts.JPT.3mer, gw = gw.3mer,dr = dr.3mer.EASonly, k = 2, n = 1, exclude = c()) # p = 0.97, non-JPT-enriched group
-chi.bysubset(data = counts.JPT.3mer, gw = gw.3mer, muts = JPT3mers) # p = 0.2, JPT enriched group
+chi.bycluster(data = counts.JPT.3mer, gw = gw.3mer,dr = dr.3mer.EASonly,
+              k = 2, n = 1, exclude = c()) # p = 0.97, non-JPT-enriched group
+chi.bysubset(data = counts.JPT.3mer, gw = gw.3mer, 
+             muts = JPT3mers) # p = 0.3, JPT enriched group
 
 #5mer groups
-chi.bycluster(data = counts.JPT.5mer, gw = gw.5mer,dr = dr.5.JPT3mers, k = 4, n = 1, exclude = c()) # p = 0.075
+chi.bycluster(data = counts.JPT.5mer, gw = gw.5mer,dr = dr.5.JPT3mers, 
+              k = 3, n = 1, exclude = c()) # p = 0.03
 
 #7mer groups
-chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT3mers, k = 2, n = 2) # p = 0.009
-chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT3mers, k = 2, n = 2, # p = 0.83
+chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT3mers,
+              k = 2, n = 2) # p = 0.001
+chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT3mers, 
+              k = 2, n = 2, # p = 0.4
               exclude = c("CAAACCC->C", "CCCACAG->C", "TTTATTT->T"))
-chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT5mers, k = 7, n = 1) # p = 0.002
-chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT5mers, k = 7, n = 1, # p = 0.36
+chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT5mers, 
+              k = 5, n = 4) # p = 6E-6
+chi.bycluster(data = counts.JPT.7mer, gw = gw.7mer,dr = dr.7.JPT5mers, 
+              k = 5, n = 4, # p = 0.2
               exclude = c("CAAACCC->C", "CCCACAG->C", "TTTATTT->T"))
-chi.bysubset(counts.JPT.7mer, gw.7mer, JPT7mers.3) # p = 0.000044
-muts.7.filtered <- subset(JPT7mers.3, !is.element(JPT7mers.3, c("CAAACCC->C", "CCCACAG->C", "TTTATTT->T")))
-chi.bysubset(counts.JPT.7mer, gw.7mer, muts.7.filtered) # p = 0.49
+chi.bysubset(counts.JPT.7mer, gw.7mer, JPT7mers.3) # p = 0.6E-6
+muts.7.filtered <- subset(JPT7mers.3, 
+                          !is.element(JPT7mers.3, c("CAAACCC->C", "CCCACAG->C", "TTTATTT->T")))
+chi.bysubset(counts.JPT.7mer, gw.7mer, muts.7.filtered) # p = 0.2
 ```
 
 ### Polymorphisms highly enriched on X
 
 Since we have all these pieces set up, I wanted to run the following test on X:
 
-```{r X enrichment across all contexts, eval = F}
+```{r X enrichment across all contexts, eval = T}
 # 3mers 
 x.3mers <- binomtest.byrow(counts.JPT.3mer, gw.3mer)
 kable(subset(x.3mers, x.3mers$p < 0.05/length(x.3mers$Context)))
