Finished updating figures for the most part

--- a/analysis/workflows_finished/main_figures/figure_building.Rmd
+++ b/analysis/workflows_finished/main_figures/figure_building.Rmd
@@ -23,6 +23,145 @@ library(grid)
 require("ggrepel")
 ```
 
+# Table 1
+
+To make this table, we need the following **functions** and *datasets*:
+
+* *3mer count dataframes for all ancestral continental groups*
+
+```{r F1BCD setup data}
+AFR_3mer_counts <- read_delim("3mer/AFR_3mer_counts.txt", 
+                              "\t", escape_double = FALSE, trim_ws = TRUE)
+EUR_3mer_counts <- read_delim("3mer/EUR_3mer_counts.txt", 
+                              "\t", escape_double = FALSE, trim_ws = TRUE)
+EAS_3mer_counts <- read_delim("3mer/EAS_3mer_counts.txt", 
+                              "\t", escape_double = FALSE, trim_ws = TRUE)
+SAS_3mer_counts <- read_delim("3mer/SAS_3mer_counts.txt", 
+                              "\t", escape_double = FALSE, trim_ws = TRUE)
+```
+
+* **Fourway.chi** Tests for heterogeneity among any four count dataframes
+* **ordered.p** performs ordered p value correction
+
+```{r T1 setup methods}
+# calculates homogeneity test p values for Fourway comparisons of counts dfs
+fourway.chi <- function(AFR, EUR, EAS, SAS, filter = T){
+  n.contexts = length(AFR$Context)
+  
+  # make dataframe for results
+  result <- data.frame(matrix(ncol=9,nrow=n.contexts))
+  colnames(result) <- c("Context", "X5mer","X3mer", "X1mer", 
+                        "AFR.Count", "EUR.Count", "EAS.Count", "SAS.Count", "p")
+  result$Context <- AFR$Context
+  result$X5mer <- AFR$X5mer # for smaller contexts, X3mer and X5mer columns do not exist,
+  result$X3mer <- AFR$X3mer # and will disappear at this step
+  result$X1mer <- AFR$X1mer 
+  result$AFR.Count <- AFR$Count; result$EUR.Count <- EUR$Count
+  result$EAS.Count <- EAS$Count; result$SAS.Count <- SAS$Count
+  
+  # start setting up tables
+  sums <- c(sum(AFR$Count), sum(EUR$Count), sum(EAS$Count), sum(SAS$Count))
+  
+  # set up table and run test for each context
+  for (i in 1:n.contexts){
+    c.a <- c(AFR$Count[i], EUR$Count[i], EAS$Count[i], SAS$Count[i])
+    c.b <- sums - c.a
+    data <- cbind(c.a, c.b)
+    warning <- is(tryCatch(chisq.test(data), warning = function(w) w), "warning")
+    if (filter == T & warning){
+      result$p[i] <- NA}
+    else result$p[i] <- chisq.test(data)$p.value
+    }
+  return(result)
+}
+
+ordered.p <- function(pdata){
+  #preprocess data to order and remove nas 
+  pdata <- pdata[complete.cases(pdata$p),]
+  myorder <- order(pdata$p)
+  n.muts <- length(pdata$p)
+  
+  p.ordered <- rep(0, n.muts)
+  
+  #set largest p-value 
+  j <- myorder[n.muts]
+  p.ordered[j] <- pdata$p[j]
+  
+  #initialize not mutated counts based on this lowest p-value mutation
+  not.mut <- c(pdata$AFR.Count[j], pdata$EUR.Count[j], 
+               pdata$EAS.Count[j], pdata$SAS.Count[j])
+  
+  for (i in n.muts:1){
+    j <- myorder[i]
+    mut <-c(pdata$AFR.Count[j], pdata$EUR.Count[j], 
+            pdata$EAS.Count[j], pdata$SAS.Count[j])
+    data <- cbind(mut, not.mut)
+    p.ordered[j] <- chisq.test(data)$p.value
+    
+    #add these mutations to the not.mutated counts for future tests
+    not.mut <- not.mut + mut
+  }
+  pdata$p <- p.ordered
+  return(pdata)
+}
+```
+
+* **Pairwise.chi** Tests for heterogeneity between any two count dataframes
+```{r pairwise.chi, echo = F}
+# calculates homogeneity test p values for pairwise comparisons of two dfs of counts
+pairwise.chi <- function(counts.1, counts.2, filter = T){
+  n.contexts = length(counts.1$Context)
+  result <- data.frame(matrix(ncol=2,nrow=n.contexts))
+  colnames(result) <- c("Context", "p")
+  
+  result$Context <- counts.1$Context
+  sum.1 <- sum(counts.1$Count)
+  sum.2 <- sum(counts.2$Count)
+
+  for (i in 1:n.contexts){
+    c.a <- c(counts.1$Count[i], counts.2$Count[i])
+    c.b <- c(sum.1, sum.2) - c.a
+    data <- cbind(c.a, c.b)
+    warning <- is(tryCatch(chisq.test(data), warning = function(w) w), "warning")
+    if (filter == T & warning){
+      result$p[i] <- NA
+    }
+    else result$p[i] <- chisq.test(data)$p.value
+  }
+  
+  return(result)
+}
+```
+
+
+```{r F4A make}
+# calculate ordered p values
+p.3mer <- fourway.chi(AFR_3mer_counts, EUR_3mer_counts, EAS_3mer_counts, SAS_3mer_counts)
+o.p.3mer <- ordered.p(p.3mer)
+
+# extract significantly variable mutation types and order by p value
+alpha <- 0.05/length(o.p.3mer$Context)
+rates <- cbind(AFR_3mer_counts$Rate, EUR_3mer_counts$Rate, SAS_3mer_counts$Rate, EAS_3mer_counts$Rate)
+table1 <- cbind(o.p.3mer$Context, rates/AFR_3mer_counts$Rate, o.p.3mer$p)
+
+table1 <- table1[order(o.p.3mer$p),]
+colnames(table1)<- c("Context", "AFR relative rate", "EUR relative rate", "SAS relative rate", "EAS relative rate", "p")
+table1 <- head(table1, 14)
+
+# plot significant 7mers and print most signif. new results
+kable(table1, digits = 600, row.names = F,
+      caption = "10 most significant new 7mers using ordered p value correction")
+```
+
+Certain table entries are bold if they are significantly enriched in Africa.  The code below calculates which threemers are significantly different (p<1e-5) between AFR and EUR in table 1.
+
+```{r find pairwise}
+pAFRvEUR <- pairwise.chi(AFR_3mer_counts, EAS_3mer_counts)
+pAFRvEUR <- subset(pAFRvEUR, pAFRvEUR$p < 1e-5)
+kable(subset(pAFRvEUR, is.element(pAFRvEUR$Context, table1[,1])))
+```
+
+
 # Figure 1
 
 ## A: heatmap of all 3mer mutation types
@@ -74,15 +213,16 @@ make.heatmap <- function(data, logunits = T){
   dr <- hclust(dist(data))
   dc <- hclust(dist(t(data)))
   
-  weights.dr <- ifelse(rownames(data) == "TCC->T", yes = 10, no = 0) + ifelse(rownames(data) == "GAT->T", yes = 9, no = 0) +
-                ifelse(rownames(data) == "ACG->T", yes = 8, no = 0) + ifelse(rownames(data) == "AAC->C", yes = 7, no = 0)
+  weights.dr <- ifelse(rownames(data) == "TCT->T", yes = 11, no = 0) + ifelse(rownames(data) == "TCC->T", yes = 11, no = 0)+
+                ifelse(rownames(data) == "GAT->T", yes = 8, no = 0) + ifelse(rownames(data) == "ACG->T", yes = 9, no = 0) +     
+                ifelse(rownames(data) == "AAC->C", yes = 7, no = 0) + ifelse(rownames(data) == "TAT->T", yes = 6, no = 0)
     
   
   dr.ordered <- reorder(as.dendrogram(dr), wts = weights.dr, agglo.FUN = mean)
   
   heatmap.2(data, Rowv = dr.ordered, Colv = as.dendrogram(dc),
             trace = 'none', col=colorRampPalette(c('blue', "white", 'red'))(n = 1000),
-            labRow = F,
+            labRow = T,
             density.info = 'none', key.xlab = "fold differece vs. mean\n(log base 2 scale)",
             key.title = NA, keysize = 0.5, key.par = list(cex=0.65),
             lhei = c(1,5.5), lwid = c(1,4))
@@ -94,28 +234,16 @@ make.heatmap <- function(data, logunits = T){
 norm.3mer.rates <- norm.byrow(rates.3mer, "fdiff")
 ```
 
-```{r F1A make, fig.height=6.21, fig.width=5.86}
+```{r F1A make, fig.height=6.25, fig.width=5.86}
 dr <- make.heatmap(norm.3mer.rates)
 ```
 
-## BCD: CI plots of polymorphism clusters
+## BCE: CI plots of polymorphism clusters
 
 To make these panels, I need the following **functions** and *datasets*:
 
 * **CI.plot.bygroup** Makes a plot of the rates of a group of mutations.  Will bug out if the mutations are of the same context, although that's not a problem for these figures.
 
-* *3mer count dataframes for all ancestral continental groups*
-
-```{r F1BCD setup data}
-AFR_3mer_counts <- read_delim("3mer/AFR_3mer_counts.txt", 
-                              "\t", escape_double = FALSE, trim_ws = TRUE)
-EUR_3mer_counts <- read_delim("3mer/EUR_3mer_counts.txt", 
-                              "\t", escape_double = FALSE, trim_ws = TRUE)
-EAS_3mer_counts <- read_delim("3mer/EAS_3mer_counts.txt", 
-                              "\t", escape_double = FALSE, trim_ws = TRUE)
-SAS_3mer_counts <- read_delim("3mer/SAS_3mer_counts.txt", 
-                              "\t", escape_double = FALSE, trim_ws = TRUE)
-```
 
 ```{r F1BCD setup methods}
 CI.plot.bygroup <- function(AFR, EUR, EAS, SAS, muts, groupname = "mutation group") {
@@ -154,7 +282,7 @@ CI.plot.bygroup <- function(AFR, EUR, EAS, SAS, muts, groupname = "mutation grou
     geom_point(size = 3, color = plotcol) +
     geom_errorbar(aes(ymax = U*norm, ymin = L*norm), color = plotcol, size =.75)+
     labs(title = paste("Estimated mutation\nrate of", groupname), y = NULL) + #y axis label
-    theme(axis.text.x = element_text(size = rel(.9)), axis.title.x = element_blank(), #adjust text sizes
+    theme(axis.text.x = element_text(size = rel(.8)), axis.title.x = element_blank(), #adjust text sizes
           axis.title.y = element_text(size = rel(.9)), axis.text.y = element_text(size = rel(.9), angle = 0, hjust = 0.5), title = element_text(size = rel(.7)),
           legend.position = 'none')
   return(CI.plot)
@@ -163,19 +291,17 @@ CI.plot.bygroup <- function(AFR, EUR, EAS, SAS, muts, groupname = "mutation grou
 ```
 
 ```{r F1BCD make, fig.height=2.5, fig.width=6.5}
-s1 <- c("TCT->T", "ACC->T", "TCA->T", "CCC->T", "ACT->T", "TCC->T")
+s1 <- c("TCT->T", "ACC->T", "TCA->T", "CCC->T", "ACT->T", "TCC->T", "GCC->T")
 a <- CI.plot.bygroup(AFR_3mer_counts, EUR_3mer_counts, EAS_3mer_counts, SAS_3mer_counts, s1, "signature 1")
 
 s2 <- c("GAT->T", "ACC->A", "GAC->T")
 b <- CI.plot.bygroup(AFR_3mer_counts, EUR_3mer_counts, EAS_3mer_counts, SAS_3mer_counts, s2, "signature 2")
 
-s3 <-c("ACG->T", "CCG->T", "GCG->T", "TCG->T")
-c <- CI.plot.bygroup(AFR_3mer_counts, EUR_3mer_counts, EAS_3mer_counts, SAS_3mer_counts, s3, "signature 3")
-
-grid.arrange(a,b,c, ncol = 3)
+s4 <-c("ACG->T", "CCG->T", "GCG->T", "TCG->T")
+d <- CI.plot.bygroup(AFR_3mer_counts, EUR_3mer_counts, EAS_3mer_counts, SAS_3mer_counts, s4, "signature 4")
 ```
 
-# E: CI plots for signal 4
+## D: CI plots for signal 3
 
 This figure was harder to make, and we'll probably revamp the way we do it.  Once we've figured that out, I'll add that code here.  For now, this figure requires the following:
 
@@ -224,9 +350,10 @@ CI.plot.subpop.bygroup <- function(subpops, muts, popnames, colors = colors.ance
   ggplot(df, aes(reorder(popnames, poplabs), theta*norm)) +
     geom_point(size = 3, color = plotcol) +
     geom_errorbar(aes(ymax = U*norm, ymin = L*norm), color = plotcol, size = .75)+
-    labs(y = paste("Estimated mutation rate of ", groupname)) + #y axis label
-    theme(axis.text.x = element_text(size = rel(1), angle = 45, hjust = 1), axis.title.x = element_blank(), #adjust text sizes
+    labs(title = paste("Estimated mutation\nrate of ", groupname), y = NULL) + #y axis label
+    theme(axis.text.x = element_text(size = rel(.8), angle = 45, hjust = 1), axis.title.x = element_blank(), #adjust text sizes
           axis.title.y = element_text(size = rel(.8)), axis.text.y = element_text(size = rel(.9)),
+          title = element_text(size = rel(.7)),
           legend.position = 'none')
 }
 ```
@@ -238,8 +365,9 @@ popnames1E <- c("Africa", "Europe", "South Asia", "CDX", "KHV", "CHS", "CHB", "J
 muts1E <- c("CAC->C", "TAT->T", "GAC->C", "AAC->C", "TAC->C")
 ```
 
-```{r F1E make, fig.height=2.5, fig.width = 2.5}
-CI.plot.subpop.bygroup(subpops1E, muts1E, popnames1E, colors1E, "signature 4")
+```{r F1E make, fig.height=2.5, fig.width = 7.75}
+c <- CI.plot.subpop.bygroup(subpops1E, muts1E, popnames1E, colors1E, "signature 3")
+grid.arrange(a,b,c,d,ncol = 4)
 ```
 
 # Figure 2
@@ -334,39 +462,15 @@ gw_7mer_counts <- read_delim("gw_counts/gw_7mer_counts.txt",
                              "\t", escape_double = FALSE, trim_ws = TRUE)
 ```
 
-
-```{r pairwise.chi, echo = F}
-# calculates homogeneity test p values for pairwise comparisons of two dfs of counts
-pairwise.chi <- function(counts.1, counts.2, filter = T){
-  n.contexts = length(counts.1$Context)
-  result <- data.frame(matrix(ncol=2,nrow=n.contexts))
-  colnames(result) <- c("Context", "p")
-  
-  result$Context <- counts.1$Context
-  sum.1 <- sum(counts.1$Count)
-  sum.2 <- sum(counts.2$Count)
-
-  for (i in 1:n.contexts){
-    c.a <- c(counts.1$Count[i], counts.2$Count[i])
-    c.b <- c(sum.1, sum.2) - c.a
-    data <- cbind(c.a, c.b)
-    warning <- is(tryCatch(chisq.test(data), warning = function(w) w), "warning")
-    if (filter == T & warning){
-      result$p[i] <- NA
-    }
-    else result$p[i] <- chisq.test(data)$p.value
-  }
-  
-  return(result)
-}
-```
-
 ```{r JPTCDX 7mers test, echo = F}
 p.CDXJPT <- pairwise.chi(CDX_EAS_7mer_counts, JPT_EAS_7mer_counts)
 p.CDXJPT <- subset(p.CDXJPT, is.element(CDX_EAS_7mer_counts$X3mer, c("AAC->C", "CAC->C", "TAT->T", "GAC->C", "TAC->C")))
 p.CDXJPT$fdr <- p.adjust(p.CDXJPT$p, method = "fdr")
 p.CDXJPT <- p.CDXJPT[order(p.CDXJPT$fdr),]
-kable(subset(p.CDXJPT, p.CDXJPT$fdr < 0.05), row.names = F)
+kable(subset(p.CDXJPT, p.CDXJPT$fdr < 0.05), row.names = F, digits = 500)
+
+#to find the fold enrichemnt, perform the following calculation:
+k <- which(JPT_EAS_7mer_counts$Context == "CAAACCC->C");JPT_EAS_7mer_counts$Rate[k]/CDX_EAS_7mer_counts$Rate[k]
 ```
 Next, we have to run a test for X enrichment, described in the paper.
 ```{r def preprocessor, echo = F}
@@ -443,7 +547,10 @@ for (i in 1:length(data$Context)){
   }
   
 }
-kable(data, digits = 6, row.names = F)
+
+data$Expected <- data$p.0*data$X_sites
+
+kable(data, digits = 50, row.names = F)
 ```
 
 ##BC
@@ -482,71 +589,6 @@ AFR_7mer_counts <- read_delim("7mer/AFR_7mer_counts.txt",
                               "\t", escape_double = FALSE, trim_ws = TRUE)
 ```
 
-
-```{r F4A setup methods}
-# calculates homogeneity test p values for Fourway comparisons of counts dfs
-fourway.chi <- function(AFR, EUR, EAS, SAS, filter = T){
-  n.contexts = length(AFR$Context)
-  
-  # make dataframe for results
-  result <- data.frame(matrix(ncol=9,nrow=n.contexts))
-  colnames(result) <- c("Context", "X5mer","X3mer", "X1mer", 
-                        "AFR.Count", "EUR.Count", "EAS.Count", "SAS.Count", "p")
-  result$Context <- AFR$Context
-  result$X5mer <- AFR$X5mer # for smaller contexts, X3mer and X5mer columns do not exist,
-  result$X3mer <- AFR$X3mer # and will disappear at this step
-  result$X1mer <- AFR$X1mer 
-  result$AFR.Count <- AFR$Count; result$EUR.Count <- EUR$Count
-  result$EAS.Count <- EAS$Count; result$SAS.Count <- SAS$Count
-  
-  # start setting up tables
-  sums <- c(sum(AFR$Count), sum(EUR$Count), sum(EAS$Count), sum(SAS$Count))
-  
-  # set up table and run test for each context
-  for (i in 1:n.contexts){
-    c.a <- c(AFR$Count[i], EUR$Count[i], EAS$Count[i], SAS$Count[i])
-    c.b <- sums - c.a
-    data <- cbind(c.a, c.b)
-    warning <- is(tryCatch(chisq.test(data), warning = function(w) w), "warning")
-    if (filter == T & warning){
-      result$p[i] <- NA}
-    else result$p[i] <- chisq.test(data)$p.value
-    }
-  return(result)
-}
-
-ordered.p <- function(pdata){
-  #preprocess data to order and remove nas 
-  pdata <- pdata[complete.cases(pdata$p),]
-  myorder <- order(pdata$p)
-  n.muts <- length(pdata$p)
-  
-  p.ordered <- rep(0, n.muts)
-  
-  #set largest p-value 
-  j <- myorder[n.muts]
-  p.ordered[j] <- pdata$p[j]
-  
-  #initialize not mutated counts based on this lowest p-value mutation
-  not.mut <- c(pdata$AFR.Count[j], pdata$EUR.Count[j], 
-               pdata$EAS.Count[j], pdata$SAS.Count[j])
-  
-  for (i in n.muts:1){
-    j <- myorder[i]
-    mut <-c(pdata$AFR.Count[j], pdata$EUR.Count[j], 
-            pdata$EAS.Count[j], pdata$SAS.Count[j])
-    data <- cbind(mut, not.mut)
-    p.ordered[j] <- chisq.test(data)$p.value
-    
-    #add these mutations to the not.mutated counts for future tests
-    not.mut <- not.mut + mut
-  }
-  pdata$p <- p.ordered
-  return(pdata)
-}
-```
-
-
 ```{r F4A make}
 # calculate ordered p values
 p.7mer <- fourway.chi(AFR_7mer_counts, EUR_7mer_counts, EAS_7mer_counts, SAS_7mer_counts)
@@ -561,6 +603,13 @@ o.sig.7mer <- o.sig.7mer[order(o.sig.7mer$p),]
 EUR.signal <- c("TCC->T", "ACC->T", "TCT->T", "CCC->T")
 new.signal <- c("GAT->T", "ACC->A", "GAC->T", "ACG->T", "CCG->T", "GCG->T", "TCG->T")
 o.new.7mers <- subset(o.sig.7mer, !is.element(o.sig.7mer$X3mer, c(EUR.signal, new.signal)))
+
+rates <- cbind(AFR_3mer_counts$Rate, EUR_3mer_counts$Rate, SAS_3mer_counts$Rate, EAS_3mer_counts$Rate)
+table1 <- cbind(o.p.3mer$Context, rates/AFR_3mer_counts$Rate, o.p.3mer$p)
+
+table1 <- table1[order(o.p.3mer$p),]
+colnames(table1)<- c("Context", "AFR relative rate", "EUR relative rate", "SAS relative rate", "EAS relative rate", "p")
+table1 <- head(table1, 14)
 
 # plot significant 7mers and print most signif. new results
 kable(head(o.new.7mers[,-c(2,3,4)], 10), digits = 600, row.names = F,
